--- a/src/stylesheets/base.scss
+++ b/src/stylesheets/base.scss
@@ -98,11 +98,16 @@ body {
   header {
     text-align: left;
 
+    .radar-title {
+      background-color: #505050!important;
+    }
+
     .radar-title .radar-title__text {
       font-size: 40px;
       width: 100%;
       padding: 10px;
       display:block;
+      color:#FFF;
     }
 
     .radar-title .radar-title__logo {
