--- a/src/stylesheets/_header.scss
+++ b/src/stylesheets/_header.scss
@@ -5,7 +5,7 @@ header {
   margin-bottom: 15px;
 
   .radar-title {
-    background-color: $grey-light;
+    background-color: #505050!important;
     padding-top: 30px;
     padding-bottom: 30px;
     display: table;
@@ -18,12 +18,13 @@ header {
       text-align: left;
       padding-left: 100px;
       h1 {
-        font-size: 55px;
+        font-size: 36px;
         font-weight: 900;
         letter-spacing: -.04em;
         line-height: 0.8em;
         margin: 0;
         text-transform: uppercase;
+        color:#FFF;
       }
     }
 
