--- a/src/stylesheets/base.scss
+++ b/src/stylesheets/base.scss
@@ -12,6 +12,7 @@ body {
   font: 18px 'Open Sans';
   -webkit-font-smoothing: antialiased;
   margin: 0;
+  background: #fffffc;
 }
 
 @media print {
@@ -132,7 +133,7 @@ body {
     }
 
     .home-link {
-      display: none;
+      display: none!important;
 
       &.selected{
         display: none;
