--- a/src/stylesheets/_colors.scss
+++ b/src/stylesheets/_colors.scss
@@ -16,3 +16,10 @@ $black: #000;
 $grey-text: rgb(51, 51, 51);
 
 $grey-alpha-03: rgba(255, 255, 255, 0.3);
+
+$port-gore:#25274d;
+$port-gore-lighter:#36386b;
+$mulled-wine:#464866;
+$spun-pearl:#AAABB8;
+$curious-blue: #2E9CCA;
+$calypso: #29648A;
