--- a/src/stylesheets/base.scss
+++ b/src/stylesheets/base.scss
@@ -8,191 +8,59 @@
 
 @import url(https://www.thoughtworks.com/css/screen.css);
 
+html,
+body {
+  height: 100%;
+  margin: 0;
+}
+
 body {
   font: 18px 'Open Sans';
   -webkit-font-smoothing: antialiased;
   margin: 0;
-  background: $port-gore;
+  background: rgb(27,158,209);
+  background: -webkit-gradient(166deg, rgba(27,158,209,1) 0%, rgba(0,113,179,1) 20%, rgba(0,79,138,1) 50%, rgba(0,48,94,1) 80%, rgba(0,21,42,1) 100%);
+  background: linear-gradient(166deg, rgba(27,158,209,1) 0%, rgba(0,113,179,1) 20%, rgba(0,79,138,1) 50%, rgba(0,48,94,1) 80%, rgba(0,21,42,1) 100%);
+  background-repeat: no-repeat;
+  background-attachment:fixed;
 }
-
-@media print {
-
-  body, article {
-    width: 100%;
-    margin: 0;
-    padding: 0;
-  }
-
-  @page {
-    margin: 2cm;
-  }
-
-  a:after {
-    content: " <" attr(href) "> ";
-    font-size: 0.8em;
-    font-weight: normal;
-  }
-
-  #radar-plot {
-    display: none;
-  }
-
-  .quadrant-table {
-    .quadrant-table__name {
-      display: block;
-      font-size: 36pt;
-      padding: 0 10px;
-      margin-bottom: 20px;
-    }
-
-    &.first .quadrant-table__name {
-      color: $green;
-    }
-    &.second .quadrant-table__name {
-      color: $blue;
-    }
-    &.third .quadrant-table__name {
-      color: $orange;
-    }
-    &.fourth .quadrant-table__name {
-      color: $violet;
-    }
-  }
-
-  .quadrant-table {
-    page-break-after: always;
-
-    ul {
-      list-style: none;
-      padding: 0;
-      margin: 0;
-    }
-
-    li {
-      page-break-inside: avoid;
-    }
-
-
-    h3 {
-
-      page-break-before: always;
-      padding: 0 10px;
-      text-transform: uppercase;
-      font-size: 18pt;
-      font-weight: bold;
-
-    }
-
-    h2 + h3 {
-      page-break-before: avoid;
-    }
-  }
-
-  .blip-list-item {
-    font-weight: bold;
-    color: $white;
-  }
-
-  .blip-item-description {
-    padding: 0 15px;
-    background: #505050!important;
-  }
-
-  header {
-    text-align: left;
-
-    .radar-title {
-      background: #505050!important;
-    }
-
-    .radar-title .radar-title__text {
-      font-size: 40px;
-      width: 100%;
-      padding: 10px;
-      display:block;
-      color:$white!important;
-    }
-
-    .radar-title .radar-title__logo {
-      display: block;
-      width: auto;
-
-      a {
-        padding: 40px 10px 0;
-        display: block;
-        &::after {
-          display: none;
-        }
-      }
-      img {
-        max-width: 150px;
-      }
-    }
-
-    .button {
-      display: none;
-    }
-
-    .home-link {
-      display: none!important;
-
-      &.selected{
-        display: none;
-      }
-    }
-
-    .print-radar {
-      display: none;
-    }
-  }
-
-  #footer {
-    display: none;
-  }
-
-  .error-container {
-    display: none;
-  }
-
-}
-
 
 @media screen {
 
   #radar {
-    width: 80%;
+    width: 90%;
     margin: 0 auto;
     position: relative;
 
     svg#radar-plot {
       margin: 0 auto;
-      transition: all 1s ease;
+      transition: all 0.3s ease;
       position: absolute;
       left: 0;
       right: 0;
 
       .legend {
         visibility: hidden;
-        transition: visibility 1s ease 1s;
+        transition: visibility 0.3s ease 1s;
         color: $white;
       }
 
       path {
         &.ring-arc-3 {
           stroke: none;
-          fill: $grey-light;
+          fill:  #ffb69b;
         }
         &.ring-arc-2 {
           stroke: none;
-          fill: $grey;
+          fill: $grey-light;
         }
         &.ring-arc-1 {
           stroke: none;
-          fill: $grey-dark;
+          fill: $grey;
         }
         &.ring-arc-0 {
           stroke: none;
-          fill: $grey-darkest;
+          fill: #528e5d;
         }
       }
 
@@ -240,7 +108,7 @@ body {
           font-weight: bold;
           text-transform: uppercase;
           fill: $black;
-          font-size: 11px;
+          font-size: 10px;
         }
       }
     }
@@ -336,7 +204,7 @@ body {
               border-top: 1px solid rgb(119, 119, 119);
               border-bottom: 1px solid rgb(119, 119, 119);
               padding: 20px;
-              color: $spun-pearl;
+              color: $white;
               font-weight: 100;
               font-size: 14px;
             }
